Implement Backend Code Fixes and Improvements